2006-02-10  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dferreyra@igc.org>

	* num-test.scm: New testcase base on Savannah bug #11427
	"<java.lang.Integer> in the interpreter gives ClassCastException".

2006-02-10  Per Bothner  <per@bothner.com>
            Gerardo Horvilleur <mago@mundojava.com>

	* misc-test.scm: New testcase based on Savannah
	bug #14697 "Error using :: <int>".

2006-02-09  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add test for macro defined and used in same module.

2006-02-09  Per Bothner  <per@bothner.com>

	* obj-test.scm (force-compile):  Since lambdas no longer autmatically
	force compilation, using a #!key does do it.

2006-02-07  Per Bothner  <per@bothner.com>

	* inlining-test.scm: New file of lots of little functions that we
	expect to be compiled optimally.
	* inlining.expected: Expected sides of the methods.
	* Makefile.am: Added appropriate rules.

	* obj-test.scm: Ad some new tests of colon syntax.

	* module1.scm: Update export list namespace:data -> plains date.
	* module3.scm (timestamp): Fix no-longer-supported syntax.

2006-01-24  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dean@octw.com>

	* SimpleB.java (i): New private field.
	(getI, setI): New public accessors.
	* classes2.scm (make-simpleC): New function to allocate <SimpleC>
	which needs to expand to a call of inherited setI.
	* obj-test.scm: Add call to make-simpleC.

2006-01-11  Per Bothner  <per@bothner.com>

	* gui-test.scm: Update for gui changes.

2005-12-10  Per Bothner  <per@bothner.com>

	* classes2.scm: Added 2 functions for capturing module-level non-static
	variable "through" a ClassExp.
	(obj-test): Call those new functions.

2005-12-05  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dean@octw.com>

	* classes2.scm: New test for Savannah bug #15151
	* obj-test.scm: Run the test.

2005-11-30  Per Bothner  <per@bothner.com>

	* scribble.scm: Test type inference/propagation by removing specifier.
