@@ -1,3 +1,8 @@
+2006-02-16  Per Bothner  <per@bothner.com>
+
+	* inlining-test.scm (tohex2, tohex2): More inlining tests.
+	* inlining.expected: Update accordingly.
+
 2006-02-10  Per Bothner  <per@bothner.com>
 	    Dean Ferreyra <dferreyra@igc.org>
 
